[package]
name = "elevator-simulator"
version = "0.1.0"
authors = ["david <wizdave97@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
termion = "1.5.6"
floating-duration = "0.1.2"
